--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
     max-width: 100%;
     border-radius: 3px;
     background: linear-gradient(45deg, #d8cb57, #fff168);
-    box-shadow:  5px -5px 10px #dacd58, -5px 5px 10px #fff56a;
+    box-shadow: 5px -5px 6px #dacd58, -3px 5px 6px #fff56a;
 }
 
 .header {
@@ -42,6 +42,14 @@ body {
     margin-bottom: 10px;
     padding-bottom: 20px;
     position: relative;
+}
+
+.fa-circle-check {
+    color: #4ECA64;
+}
+
+.fa-circle-xmark {
+    color: #DB5A5A;
 }
 
 .formControl label {
@@ -77,7 +85,7 @@ body {
     visibility: visible;
 }
 
-.formControl.error small{
+.formControl.error .errorPass{
     color: #DB5A5A;
     visibility: visible;
 }
@@ -85,11 +93,11 @@ body {
 .formControl i {
     position: absolute;
     top: 45px;
-    right: 10px;
+    right: 16px;
     visibility: hidden;
 }
 
-.formControl small {
+.formControl .errorPass {
     visibility: hidden;
     position: absolute;
     margin-top: 5px;
